# UI_API

./: CMakeLists.txt  Makefile  README.md  UI_API.cpp  UI_API.h  config.mk  p2.cpp  p2.h
Teste_QT/Teste_QT/: CMakeLists.txt  tst_teste_ui_api.cpp
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-417243e330998d869088.json  cmakeFiles-v1-8a7b07c97e641805e641.json  codemodel-v2-1fb42166c48db707fcf7.json  index-2022-10-11T12-58-01-0738.json  target-Teste_UI_API-Debug-46b216648ecc57cff743.json  target-Teste_UI_API_autogen-Debug-0c720103fd73738f41b3.json  target-mylib_autogen_timestamp_deps-Debug-96f5fed80319d3e57fe0.json
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-d04ed3a0f70a236e35c2.json  index-2022-10-11T12-35-41-0712.json  target-Teste_UI_API-Debug-fc125b204de36bf30979.json  target-Teste_UI_API_autogen_timestamp_deps-Debug-2d30f5b0b4bf015d9d0e.json  target-mylib-Debug-01450d0266f16dda6329.json  target-mylib_autogen-Debug-4ba591395e18d8b6d58c.json
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/Teste_UI_API_autogen/: deps  moc_predefs.h
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/Teste_UI_API_autogen/include/: tst_teste_ui_api.moc  tst_teste_ui_api.moc.d
Teste_QT/build-Teste_QT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/mylib_autogen/: deps
teste/: CMakeLists.txt  pch.cpp  pch.h  test.cpp  teste.vcxproj
teste/src/: CMakeLists.txt
teste/test/: CMakeLists.txt  ui_api_test.cpp
